# gallery-filter

./: docker-compose.ecs.yml  docker-compose.yml  readme.md
gallery-filter-client/: README.md  package.json  vue.config.js
gallery-filter-client/src/: App.vue
gallery-filter-client/src/components/: ContentDrawer.vue  ImageCard.vue  Introduction.vue  TwitterLogin.vue
gallery-filter-client/src/plugins/: store.js
gallery-filter-client/src/router/: index.js
gallery-filter-client/src/views/: Gallery.vue  Home.vue
gallery-filter-engine/: Dockerfile  pyproject.toml  requirements.txt
gallery-filter-engine/app/: __init__.py
gallery-filter-engine/app/model/: Recog2DModel.py  __init__.py
gallery-filter-engine/gallery-filter-engine/: main.py
gallery-filter-engine/gallery-filter-engine/model/: Recog2DModel.py
gallery-filter-server/: Dockerfile  build.gradle  settings.gradle
gallery-filter-server/src/main/java/com/example/galleryfilter/: GalleryFilterServerApplication.java
gallery-filter-server/src/main/java/com/example/galleryfilter/config/: TwitterConfig.java  WebSecurityConfig.java
gallery-filter-server/src/main/java/com/example/galleryfilter/controller/: AuthController.java  TweetController.java
gallery-filter-server/src/main/resources/: application.yml  schema.sql
gallery-filter-server/src/main/resources/static/: index.html
gallery-filter-server/src/main/resources/static/js/: app.js  chunk-vendors.js
gallery-filter-server/src/test/java/com/example/galleryfilter/: GalleryFilterServerApplicationTests.java
(+7 files in other folders)
