[tool.poetry]
name = "gallery-filter-engine"
version = "0.1.0"
description = ""
authors = ["y-yuya <yuuyay722@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
torch = "^1.9.0"
torchvision = "^0.10.0"
Pillow = "^8.2.0"
pytorch-lightning = "^1.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
